css/custom.css
body {
    margin: 0;
    overflow-x: hidden; 
    font-size: 1rem;

}

.background {
    height: 100vh;
    width: 100vw;
    position: absolute;
    background-image: url(../img/wine-corks-medium.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
    background-attachment: fixed;
}

.bg-purple {
    background-color: rgba(90, 37, 97, 1);
    color: white;
}

.bg-white {
    background-color: white;
}

.bg-grey {
    background-color: #e7e7e7f3
}

.pourer-link,
.pourer-link:hover,
.pourer-link:visited,
.pourer-link:focus {
    color: black;
    text-decoration: none;
}

.full-height {
    height: 100vh;
}

.full-width {
    width: 100vw;
}

#home .jumbotron {
    /* margin-top: 6rem; */
    height: 80vh;
    color: white;
    background-color: rgba(90, 37, 97, .7);
    z-index: 2;
}

#home .row {
    margin-top: 40px;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid rgba(90, 37, 97, 1);
    margin: 1em 0;
    padding: 0; 
   background-color: rgba(90, 37, 97, 1)
}

img.img-fluid {
    max-height: 67vh;
}

.flex-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-evenly;
    align-content: space-around;
}

.mco-bio {
    background-color: rgba(90, 37, 97, .90);
    color: white;
    position: absolute; 
    bottom: 76px;
    height: 0;
    transition: .6s ease;
    overflow: hidden;
    /* padding: 10px; */
}

.mco-card {
    margin-top: 3rem;
}

.mco-card:hover .mco-bio,
.mco-card:active .mco-bio {
    height: 400px;
    padding: 10px;
    overflow-y: scroll;
}

.mco-heading {
    margin-top: 80px;
}

.mco-info {
    margin-top: 2px;
}

.mco-scroll::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(90, 37, 97, .60);
	background-color: rgba(90, 37, 97, 0.356);
}

.mco-scroll::-webkit-scrollbar {
	width: 6px;
	background-color: rgba(90, 37, 97, .60);
}

.mco-scroll::-webkit-scrollbar-thumb {
	background-color: rgb(54, 22, 58);
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.6);
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: rgba(255,255,255,.9);
}

nav.navbar {
    height: 80px;
}

.nav-link {
    font-size: 1.5rem;
}

@media (max-width: 650px) { 
    #home .jumbotron {
        width: auto;
        height: auto;
        margin-right: 15px;
    }
}

